# study-polars2

./: .gitignore  README.md  pyproject.toml
data/: online_retail.parquet
nbs/: choices.html  choices.md  index.md  make_review.py  question.md  review.ipynb  status.py  study_polars2.ipynb
src/study_polars2/: __init__.py  col.py
src/tools/: create_check_code.py
