[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
dependencies = [
  "jupyter>=1.1.1",
  "polars[numpy,plot,pandas]>=1.33.1",
]
description = "Polars 100 knock"
license = {text = "Apache-2.0"}
name = "study-polars2"
readme = "README.md"
requires-python = ">=3.13"
version = "0.2.0"

[dependency-groups]
dev = [
  "jupyterlab-freeze>=0.1.2",
  "more-itertools>=10.8.0",
]

[project.urls]
homepage = "https://github.com/SaitoTsutomu/study-polars2"

[project.scripts]
study-polars2 = "study_polars2:main"

[tool.taskipy.tasks]
check = "uv run src/tools/create_check_code.py && uv run tmp/code_ok.py | grep NG && uv run tmp/code_ng.py | grep OK"

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
exclude = ["*.ipynb", "nbs"]
src = ["src"]

[tool.ruff.lint]
ignore = ["COM812", "CPY", "D203", "D213", "D400", "D415", "DOC201", "DOC501", "E501", "PLW1514"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.4,<0.9.0"]
